Fix: Large zoom overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -380,7 +380,7 @@ a:hover {
     align-items: center;
     justify-content: center;
 
-    gap: 2rem;
+    gap: 2vmin;
 }
 
 .page-home canvas {
@@ -403,7 +403,7 @@ a:hover {
 
 .page-home .super .block.text {
     max-width: 40ch;
-    font-size: 2.5vmin;
+    font-size: 1.25rem;
 }
 
 .page-home .super .block.text h1 {
@@ -415,11 +415,14 @@ a:hover {
 }
 
 .page-home .super .block.image {
-    max-width: 80ch;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .page-home .super .block.image img {
-    width: 100%;
+    max-width: 80ch;
+    max-height: 50vh;
     filter: drop-shadow(0 0 64px rgba(0, 0, 0, 0.2)) drop-shadow(0 0 8px rgba(0, 0, 0, 0.35));
 }
 
